set up nav menus + icons + appbar title

--- a/client/modules/core/components/style.css
+++ b/client/modules/core/components/style.css
@@ -67,6 +67,10 @@ header {
   margin-bottom: 30px;
 }
 
+.app-title {
+  cursor: pointer;
+}
+
 footer {
   margin-top: 50px;
   border-top: 1px solid #EAEAEA;
