--- a/client/modules/core/components/style.css
+++ b/client/modules/core/components/style.css
@@ -58,6 +58,10 @@ body {
   font-family: 'Roboto', Helvetica, 'Segoe UI', Arial, freesans, sans-serif;
 }
 
+.centered {
+  text-align: center;
+}
+
 #react-root {
   min-height:100vh;
 }
